--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,18 +10,13 @@
 }
 .slanted{
     background: rgb(168, 154, 136);
-    box-sizing: border-box;
 }
 .slanted:after{
-    position: absolute;
+    display: inherit;
     background: inherit;
-    height: 600px;
+    height: 150px;
     z-index: -1;
     content: '';
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
     transform-origin: top left;
     transform: skewY(4deg);
 }
@@ -37,6 +32,9 @@
     }
     .welcome{
         font-size: 3em;
+    }
+    .slanted:after{
+        height: 100px;
     }
 }
 @media only screen and (max-width: 764px){
@@ -62,6 +60,6 @@
         padding-top: 30px;
     }
     .slanted:after{
-        height: 430px;
+        height: 50px;
     }
 }
