--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,19 +1,49 @@
 .projects{
     text-align: center;
     padding-top: 30px;
-    box-sizing: border-box;
     background: rgb(168, 154, 136);
 }
+.projectsTitle{
+    font-size: 4em;
+}
+.textProjects{
+    font-size: 2em;
+    padding-top: 70px;
+}
 .projects:after{
-    position: absolute;
+    display: inherit;
     background: inherit;
     height: 150px;
     z-index: -1;
     content: '';
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
     transform-origin: top left;
     transform: skewY(4deg);
+}
+@media only screen and (max-width: 992px){
+    .projectsTitle{
+        font-size: 3em;
+    }
+    .projects:after{
+        height: 100px;
+    }
+}
+@media only screen and (max-width: 764px){
+    .projectsTitle{
+        font-size: 2.8em;
+    }
+    .textProjects{
+        font-size: 1.6em;
+    }
+}
+@media only screen and (max-width: 460px){
+    .textProjects{
+        font-size: 0.9em;
+        padding-top: 20px;
+    }
+    .projectsTitle{
+        font-size: 1.9em;
+    }
+    .projects:after{
+        height: 50px;
+    }
 }
