--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -11,6 +11,11 @@
 }
 .links:hover{
     text-decoration: none;
+    color: cadetblue;
+}
+.navbar-nav{
+    float: none;
+    text-align: center;
 }
 @media only screen and (max-width: 280px){
     .navbar{
