--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,7 @@
 @import "./home.css";
 @import "./menu.css";
 @import "./projects.css";
+@import "./underline.css";
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
