--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,4 @@ $link-hover-decoration:                   none;
 @import "./home.css";
 @import "./menu.css";
 @import "./projects.css";
+@import "./underline.css";
