--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -9,7 +9,7 @@
     text-align: center;
 }
 .links{
-    padding: 15px
+    padding: 15px;
 }
 @media only screen and (max-width: 280px){
     .navbar{
