--- a/src/styles/underline.css
+++ b/src/styles/underline.css
@@ -1,4 +1,12 @@
 .underline{
-    border: 6px solid rgb(124, 0, 0);
+    border: 4px solid rgb(124, 0, 0);
     border-radius: 25px;
+    position: absolute;
+    right: 20%;
+    width: 60%;
+}
+@media only screen and (max-width: 575px){
+    .underline{
+        display: none;
+    }
 }
