--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -72,12 +72,11 @@
     transition: 0.1s ease-in-out;
 }
 .homeimg{
-    border: 3px solid rgb(0, 0, 0);
+    border: 2px solid;
 }
 /*menu*/
 .navbar{
     border-bottom: 1px solid rgb(124, 124, 124);
-    background: white;
     z-index: 1;
 }
 .navbar-nav{
@@ -86,6 +85,9 @@
 }
 .links{
     padding: 20px;
+}
+.brand{
+    font-size: 1.3em;
 }
 /*projects*/
 .projects{
@@ -110,7 +112,7 @@
 }
 /*underline*/
 .underline{
-    border: 4px solid rgb(124, 0, 0);
+    border: 4px solid;
     border-radius: 25px;
     position: absolute;
     right: 20%;
