--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 $primary: #1A1F23;
-$secondary: #7490AA;
-$info: #C6D7DD;
+$secondary: #819AB1;
+$info: #E7EBEE;
 $light: #F5F5F5;
 
 $theme-colors: (
