--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -83,7 +83,8 @@
     text-align: center;
 }
 .links{
-    padding: 20px;
+    padding: 5px;
+    display: flex;
 }
 .brand{
     font-size: 1.3em;
@@ -111,11 +112,11 @@
 }
 /*underline*/
 .underline{
+    display: flex;
     border: 4px solid;
     border-radius: 25px;
     position: absolute;
-    right: 20%;
-    width: 60%;
+    width: 100%;
 }
 /*@media*/
 @media only screen and (max-width: 575px){
