--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,12 +19,12 @@
 
 /*Title*/
 .title{
-    font-size: 4em;
+    font-size: clamp(2em, 8vw, 4.5em);
 }
 
 /*Header text*/
 .text{
-    font-size: 2em;
+    font-size: clamp(1em, 3vw, 2em);
     padding-top: 5vw;
 }
 
@@ -65,30 +65,8 @@
     width: 100%;
 }
 
-/*@media*/
-@media only screen and (max-width: 992px){
-    .title{
-        font-size: 3em;
-    }
-}
-@media only screen and (max-width: 764px){
-    .title{
-        font-size: 2.8em;
-    }
-    .text{
-        font-size: 1.6em;
-    }
-}
 @media only screen and (max-width: 575px){
     .underline{
         display: none;
-    }
-}
-@media only screen and (max-width: 460px){
-    .text{
-        font-size: 0.9em;
-    }
-    .title{
-        font-size: 1.9em;
     }
 }
