--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,17 @@
+/*Global text settings */
+.otherText{
+    font-size: clamp(0.8em, 2vw, 1.25em);
+}
+
+.mediumTitle{
+    font-size: clamp(1.25em, 3vw, 1.75em);
+}
+
+.smallTitle{
+    font-size: clamp(1em, 2vw, 1.5em);
+}
+
+
 /*Heder container */
 .headerContainer{
     text-align: center;
@@ -38,6 +52,11 @@
 /*home*/
 .homeimg{
     border: 2px solid;
+}
+
+/*home*/
+.logo{
+    margin: 15px;
 }
 
 /*menu*/
