--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,13 +1,4 @@
 @charset "UTF-8";
-/* first version*/
-/*second version
-
-$primary: #001427;
-$secondary: #BF0603;
-$info: #708D81;
-$light: #FDFFFC;
-$dark: #8D0801;
-*/
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -3863,7 +3854,7 @@ input[type=button].btn-block {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #1A1F23;
+  border-bottom: 1px solid #dee2e6;
 }
 .nav-tabs .nav-item {
   margin-bottom: -1px;
@@ -3874,7 +3865,7 @@ input[type=button].btn-block {
   border-top-right-radius: 0.25rem;
 }
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border-color: #e9ecef #e9ecef #1A1F23;
+  border-color: #e9ecef #e9ecef #dee2e6;
 }
 .nav-tabs .nav-link.disabled {
   color: #6c757d;
@@ -4259,7 +4250,7 @@ input[type=button].btn-block {
   color: rgba(255, 255, 255, 0.5);
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: #F5F5F5;
+  color: rgba(255, 255, 255, 0.75);
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
