--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,7 +15,7 @@
 /*Heder container */
 .headerContainer{
     text-align: center;
-    padding-top: 70px;
+    padding-top: clamp(20px, 6vw, 70px);
     transition: 0.1s ease-in-out;
     margin-bottom: 10vw;
 }
@@ -47,6 +47,7 @@
     margin-top: 80px;
     padding: 60px;
     padding-bottom: 20px;
+    text-align: center;
 }
 
 /*home*/
