--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,6 +14,7 @@
 iframe{
     width: 100%;
     height: 100%;
+    border: none;
 }
 
 /*Heder container */
@@ -38,12 +39,12 @@ iframe{
 /*Title*/
 .title{
     font-size: clamp(2em, 6.9vw, 4.5em);
+    padding-bottom: 5vw;
 }
 
 /*Header text*/
 .text{
     font-size: clamp(1em, 3vw, 2em);
-    padding-top: 5vw;
 }
 
 /*footer*/
