--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -57,7 +57,7 @@ iframe{
 
 /*home*/
 .homeimg{
-    border: 3px solid;
+    box-shadow: 0px 0px 10px gray;
 }
 .logo{
     margin: 15px;
@@ -69,6 +69,7 @@ iframe{
 /*menu*/
 .navbar{
     z-index: 1;
+    box-shadow: 0px 0px 5px black;
 }
 .navbar-nav{
     float: none;
