--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -62,7 +62,7 @@ iframe{
 
 /*home*/
 .homeimg{
-    box-shadow: 0px 0px 10px gray;
+    box-shadow: 0px 0px 5px black;
     margin-bottom: clamp(20px, 6vw, 40px);
 }
 .homeLinks:hover{
